@@ -1265,6 +1265,13 @@ the optioal parameter `print-escape-p` can be used to turn off escaping:
     (writeln "Hello, World!" nil)
 
 
+### (fresh-line [dest]) -> boolean
+
+Since: 1.5
+
+Print an EOL character (-sequence) unless already at the beginning of line.
+
+
 ### (write-to-string obj [print-escape-p]) -> result-string
 
 Since: 1.4
