@@ -7,6 +7,8 @@ Changes in JMurmel-1.5.0 relative to JMurmel-1.4.8
      error to jerror
  * compiler allows defmacro inside labels forms
 
+ * added fresh-line
+
  * mlib: added format, formatter, error
 
 
